fix: fixed z-index issues with notifs

--- a/frontend/components/ScrollView.module.scss
+++ b/frontend/components/ScrollView.module.scss
@@ -1,5 +1,6 @@
 .scrollView {
   position: relative;
+  z-index: 0;
 }
 
 @media (max-width: 800px) {
